# bt-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  bridge.cpp  bridge.hpp  main.cpp  nodes.cpp  nurse.cpp  tree.xml
bts/: hospital.btproj  hospital.xml  labsamples.xml
src/: nurse.cpp
